--- a/_config.yml
+++ b/_config.yml
@@ -210,8 +210,8 @@ display_tags: ['formatting', 'images', 'links', 'math', 'code'] # this tags will
 
 scholar:
 
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Huang]
+  first_name: [Jin]
 
   style: apa
   locale: en
