--- a/_config.yml
+++ b/_config.yml
@@ -67,11 +67,11 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: Jin Huang # your GitHub user name
+github_username: Jn-Huang # your GitHub user name
 gitlab_username: # your GitLab user name
-twitter_username: # your Twitter handle
+twitter_username: JinHuang9306000 # your Twitter handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
-linkedin_username: # your LinkedIn user name
+linkedin_username: jin-huang-04220224b # your LinkedIn user name
 telegram_username: # your Telegram user name
 scholar_userid: 5xB2e10AAAAJ # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
